--- a/index.html
+++ b/index.html
@@ -1,177 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel-Agencia</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-  </head>
-  <body>
-    <header>
-      <nav class="navbar">
-        <h2 class="logo"><a href="#">Travel-Agencia</a></h2>
-        <input type="checkbox" id="menu-toggler">
-        <label for="menu-toggler" id="hamburger-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="24px" height="24px">
-            <path d="M0 0h24v24H0z" fill="none"/>
-            <path d="M3 18h18v-2H3v2zm0-5h18V11H3v2zm0-7v2h18V6H3z"/>
-          </svg>
-        </label>
-        <ul class="all-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#contact">Contact Us</a></li>
-        </ul>
-      </nav>
-    </header>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <title>Admin Dashboard Panel</title>
+</head>
+<body>
+    <nav>
+        <div class="logo-name">
+            <div class="logo-image">
+               <img src="images/logo.png" alt="">
+            </div>
 
-    <section class="homepage" id="home">
-      <div class="content">
-        <div class="text">
-          <h1>Camping Gear and Essentials</h1>
-          <p>
-            Discover top-quality camping gear for unforgettable outdoor adventures. <br> Gear up and make lasting memories.</p>
+            <span class="logo_name">Admin</span>
         </div>
-        <a href="#services">Our Services</a>
-      </div>
-    </section>
 
-    <section class="services" id="services">
-      <h2>Our Services</h2>
-      <p>Explore our wide range of camping gear services.</p>
-      <ul class="cards">
-        <li class="card">
-          <img src="images/tents.jpg" alt="img">
-          <h3>Tents</h3>
-          <p>Experience comfort and protection with our high-quality camping tents.</p>
-        </li>
-        <li class="card">
-          <img src="images/bags.jpg" alt="img">
-          <h3>Sleeping Bags</h3>
-          <p>Stay cozy and warm during your camping trips with our premium sleeping bags.</p>
-        </li>
-        <li class="card">
-          <img src="images/stoves.jpg" alt="img">
-          <h3>Camp Stoves</h3>
-          <p>Cook delicious meals in the great outdoors with our reliable camp stoves.</p>
-        </li>
-        <li class="card">
-          <img src="images/backpacks.jpg" alt="img">
-          <h3>Backpacks</h3>
-          <p>Carry your essentials comfortably with our durable and functional camping backpacks.</p>
-        </li>
-        <li class="card">
-          <img src="images/chair.jpg" alt="img">
-          <h3>Camp Chairs</h3>
-          <p>Relax and unwind in style with our comfortable and portable camping chairs.</p>
-        </li>
-        <li class="card">
-          <img src="images/light.jpg" alt="img">
-          <h3>Camp Lights</h3>
-          <p>Illuminate your campsite with our reliable and energy-efficient camping lights.</p>
-        </li>
-      </ul>
-    </section>
+        <div class="menu-items">
+            <ul class="nav-links">
+                <li><a href="#">
+                    <i class="uil uil-estate"></i>
+                    <span class="link-name">Dahsboard</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-files-landscapes"></i>
+                    <span class="link-name">Content</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-chart"></i>
+                    <span class="link-name">Analytics</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-thumbs-up"></i>
+                    <span class="link-name">Like</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-comments"></i>
+                    <span class="link-name">Comment</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-share"></i>
+                    <span class="link-name">Share</span>
+                </a></li>
+            </ul>
+            
+            <ul class="logout-mode">
+                <li><a href="#">
+                    <i class="uil uil-signout"></i>
+                    <span class="link-name">Logout</span>
+                </a></li>
 
-    <section class="portfolio" id="portfolio">
-      <h2>Our Portfolio</h2>
-      <p>Take a look at some of our memorable camping adventures.</p>
-      <ul class="cards">
-        <li class="card">
-          <img src="images/camping-1.jpg" alt="img">
-          <h3>Mountain Hiking</h3>
-          <p>Embark on an exhilarating hiking adventure in the breathtaking mountain ranges.</p>
-        </li>
-        <li class="card">
-          <img src="images/camping-2.jpg" alt="img">
-          <h3>Lakeside Camping</h3>
-          <p>Enjoy a tranquil camping experience by the serene shores of picturesque lakes.</p>
-        </li>
-        <li class="card">
-          <img src="images/camping-3.jpg" alt="img">
-          <h3>Beach Camping</h3>
-          <p>Escape to sandy beaches and camp under the starry sky by the crashing waves.</p>
-        </li>
-        <li class="card">
-          <img src="images/camping-4.jpg" alt="img">
-          <h3>Forest Exploration</h3>
-          <p>Discover the wonders of lush forests and immerse yourself in nature's beauty.</p>
-        </li>
-        <li class="card">
-          <img src="images/camping-5.jpg" alt="img">
-          <h3>RV Camping</h3>
-          <p>Experience the freedom of road trips and camping adventures with our RV rentals.</p>
-        </li>
-        <li class="card">
-          <img src="images/camping-6.jpg" alt="img">
-          <h3>Desert Camping</h3>
-          <p>Embark on a unique desert camping experience and witness stunning landscapes.</p>
-        </li>
-      </ul>
-    </section>
+                <li class="mode">
+                    <a href="#">
+                        <i class="uil uil-moon"></i>
+                    <span class="link-name">Dark Mode</span>
+                </a>
 
-    <section class="about" id="about">
-      <h2>About Us</h2>
-      <p>Discover our story in providing camping services.</p>
-      <div class="row company-info">
-        <h3>Our Story</h3>
-        <p>Experience the excellence of our camping gear and services, where we have been offering high-quality camping essentials and gear for outdoor enthusiasts for over a decade. Our commitment to quality and customer satisfaction ensures that every adventurer can rely on us for their camping needs.</p>
-      </div>
-      <div class="row mission-vision">
-        <h3>Our Mission</h3>
-        <p>At Camping Gear Experts, our mission is to equip outdoor enthusiasts with top-notch camping gear and essentials that enhance their outdoor experiences. We strive to provide reliable, durable, and innovative products that contribute to memorable adventures and lasting memories.</p>
-        <h3>Our Vision</h3>
-        <p>Our vision is to become the go-to destination for camping enthusiasts, known for our extensive selection of premium camping gear and exceptional customer service. We aspire to inspire and enable people to embrace the beauty of nature and create unforgettable camping experiences.</p>
-      </div>
-      <div class="row team">
-        <h3>Our Team</h3>
-        <ul>
-          <li>Mairaj Siddiqui - Founder and CEO</li>
-          <li>Adeel Ahmed - Gear Specialist</li>
-          <li>Mujab - Customer Representative</li>
-          <li>Abdul Rafay - Operations Manager</li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="contact" id="contact">
-      <h2>Contact Us</h2>
-      <p>Reach out to us for any inquiries or feedback.</p>
-      <div class="row">
-        <div class="col information">
-          <div class="contact-details">
-            <p><i class="fas fa-map-marker-alt"></i>Block B Street 3</p>
-            <p><i class="fas fa-envelope"></i> info@travelagencia.com</p>
-            <p><i class="fas fa-phone"></i> (123) 456-7890</p>
-            <p><i class="fas fa-clock"></i> Monday - Friday: 9:00 AM - 5:00 PM</p>
-            <p><i class="fas fa-clock"></i> Saturday: 10:00 AM - 3:00 PM</p>
-            <p><i class="fas fa-clock"></i> Sunday: Closed</p>
-            <p><i class="fas fa-globe"></i> www.codingenpalweb.com</p>
-          </div>          
+                <div class="mode-toggle">
+                  <span class="switch"></span>
+                </div>
+            </li>
+            </ul>
         </div>
-        <div class="col form">
-          <form>
-            <input type="text" placeholder="Name*" required>
-            <input type="email" placeholder="Email*" required>
-            <textarea placeholder="Message*" required></textarea>
-            <button id="submit" type="submit">Send Message</button>
-          </form>
+    </nav>
+
+    <section class="dashboard">
+        <div class="top">
+            <i class="uil uil-bars sidebar-toggle"></i>
+
+            <div class="search-box">
+                <i class="uil uil-search"></i>
+                <input type="text" placeholder="Search here...">
+            </div>
+            
+            <img src="https://purwosari.magetan.go.id/image/admin.png" alt="">
         </div>
-      </div>
+
+        <div class="dash-content">
+            <div class="overview">
+                <div class="title">
+                    <i class="uil uil-tachometer-fast-alt"></i>
+                    <span class="text">Dashboard</span>
+                </div>
+
+                <div class="boxes">
+                    <div class="box box1">
+                        <i class="uil uil-thumbs-up"></i>
+                        <span class="text">Total Likes</span>
+                        <span class="number">50,120</span>
+                    </div>
+                    <div class="box box2">
+                        <i class="uil uil-comments"></i>
+                        <span class="text">Comments</span>
+                        <span class="number">20,120</span>
+                    </div>
+                    <div class="box box3">
+                        <i class="uil uil-share"></i>
+                        <span class="text">Total Share</span>
+                        <span class="number">10,120</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="activity">
+                <div class="title">
+                    <i class="uil uil-clock-three"></i>
+                    <span class="text">Recent Activity</span>
+                </div>
+
+                <div class="activity-data">
+                    <div class="data names">
+                        <span class="data-title">Name</span>
+                        <span class="data-list">Mujtaba</span>
+                        <span class="data-list">Sahil Khan</span>
+                        <span class="data-list">Mujab Ahmed</span>
+                        <span class="data-list">Adeel Ahmed</span>
+                        <span class="data-list">Muhammad Mairaj</span>
+                        <span class="data-list">Hansraj Wesnani</span>
+                        <span class="data-list">Muhammad Umer</span>
+                    </div>
+                    <div class="data email">
+                        <span class="data-title">Email</span>
+                        <span class="data-list">mujtaba@gmail.com</span>
+                        <span class="data-list">sahilkhan@gmail.com</span>
+                        <span class="data-list">mujabahmed@gmail.com</span>
+                        <span class="data-list">adeelahmed@gmail.com</span>
+                        <span class="data-list">siddiquimairaj70@gmail.com</span>
+                        <span class="data-list">hasnrajwesnani@gmail.com</span>
+                        <span class="data-list">umermohammad@gmail.com</span>
+                    </div>
+                    <div class="data joined">
+                        <span class="data-title">Joined</span>
+                        <span class="data-list">2024-02-1</span>
+                        <span class="data-list">2024-03-8</span>
+                        <span class="data-list">2024-05-7</span>
+                        <span class="data-list">2024-06-13</span>
+                        <span class="data-list">2024-07-14</span>
+                        <span class="data-list">2024-09-14</span>
+                        <span class="data-list">2024-10-4</span>
+                    </div>
+                    <div class="data type">
+                        <span class="data-title">Type</span>
+                        <span class="data-list">New</span>
+                        <span class="data-list">Member</span>
+                        <span class="data-list">Member</span>
+                        <span class="data-list">New</span>
+                        <span class="data-list">Member</span>
+                        <span class="data-list">New</span>
+                        <span class="data-list">Member</span>
+                    </div>
+                    <div class="data status">
+                        <span class="data-title">Status</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Liked</span>
+                        <span class="data-list">Liked</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer>
-      <div>
-        <span>Copyright © 2024 All Rights Reserved</span>
-        <span class="link">
-            <a href="#">Home</a>
-            <a href="#contact">Contact</a>
-        </span>
-      </div>
-    </footer>
-
-  </body>
+    <!-- link to java-script -->
+    <script src="script.js"></script>
+</body>
 </html>
